<resources>
    <string name="app_name">GuitarixDroid</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="app_icon">App icon image</string>

    <!-- String related to tuner activity -->
    <string name="frequency_label">Freq:</string>
    <string name="freq_unit">Hz</string>

    <!-- String related to dialog and toast  -->
    <string name="title_connection_error">Connection Error</string>
    <string name="content">Could not establish connection with guitarix.  Make sure that you entered the right IP/host name in the setting and that the guitarix server is running.</string>
    <string name="agree">OK</string>
    <string name="connected">Connected to Guitarix</string>
    <string name="waiting">Please wait&#8230;</string>
    <string name="connecting">Connecting to Guitarix server&#8230;</string>


    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_lock_preset">Lock Preset</string>
    <string name="pref_title_screen_awake">Always keep screen on</string>
    <string name="pref_lock_screen_rotation">Lock screen rotation</string>
    <string name="pref_action_licenses">Open Source Licenses</string>


    <!-- settings for Network -->
    <string name="pref_header_network">Guitarix Server</string>

    <string name="pref_default_display_ip">Please enter ip or host name</string>
    <string name="pref_title_display_ip">IP or host name</string>
    <string name="pref_default_display_port">Please enter port number</string>
    <string name="pref_title_display_port">Port</string>
    <string name="connect">Connect</string>
    <string name="tuner_title">Tuner (Standard)</string>

</resources>
